force-app/main/default/objects/maps__AdvRouteRoutableObject__c/maps__AdvRouteRoutableObject__c.object-meta.xml
<CustomObject>
    <description>This will hold any Advanced Route defaults needed for an object</description>
    <label>Maps Advanced Route Routable Object</label>
    <nameField>
        <label>Maps Advanced Route Routable Object Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Route Routable Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>