force-app/main/default/objects/maps__AdvRouteRoutableObject__c/fields/maps__AvailableHoursDefaults__c.field-meta.xml
<CustomField>
    <fullName>maps__AvailableHoursDefaults__c</fullName>
    <description>This holds any defaults needed to determine the available hours of records</description>
    <label>Available Hours Defaults</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>