force-app/main/default/objects/maps__AdvRouteRoutableObject__c/fields/maps__CoreBaseObjectId__c.field-meta.xml
<CustomField>
    <fullName>maps__CoreBaseObjectId__c</fullName>
    <description>This is the id of the base object associated to the Routable object</description>
    <label>Core Base Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>