force-app/main/default/objects/maps__AdvRouteRoutableObject__c/fields/maps__DefaultEndDate__c.field-meta.xml
<CustomField>
    <fullName>maps__DefaultEndDate__c</fullName>
    <description>This is the default end date used for promo windows</description>
    <label>Default End Date</label>
    <type>Date</type>
</CustomField>