force-app/main/default/objects/maps__AdvRouteRoutableObject__c/fields/maps__DefaultFrequencyLength__c.field-meta.xml
<CustomField>
    <fullName>maps__DefaultFrequencyLength__c</fullName>
    <description>This is the default value used for frequency length</description>
    <label>Default Frequency Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>