force-app/main/default/objects/maps__AdvRouteRoutableObject__c/fields/maps__DefaultFrequencyLengthUnits__c.field-meta.xml
<CustomField>
    <fullName>maps__DefaultFrequencyLengthUnits__c</fullName>
    <description>This is the default frequency length units</description>
    <label>Default Frequency Length Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>weeks</fullName>
            </value>
            <value>
                <fullName>months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>