force-app/main/default/objects/maps__AdvRouteRoutableObject__c/fields/maps__DefaultMaxDaysBetweenVisits__c.field-meta.xml
<CustomField>
    <fullName>maps__DefaultMaxDaysBetweenVisits__c</fullName>
    <description>This is the default value used for maximum days between visits</description>
    <label>Default Max Days Between Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>