force-app/main/default/objects/maps__AdvRouteRoutableObject__c/fields/maps__DefaultMinDaysBetweenVisits__c.field-meta.xml
<CustomField>
    <fullName>maps__DefaultMinDaysBetweenVisits__c</fullName>
    <description>This is the default value used for minimum days between visits</description>
    <label>Default Min Days Between Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>