force-app/main/default/objects/maps__AdvRouteRoutableObject__c/fields/maps__DefaultStartDate__c.field-meta.xml
<CustomField>
    <fullName>maps__DefaultStartDate__c</fullName>
    <description>This is the default start date used for promo windows</description>
    <label>Default Start Date</label>
    <type>Date</type>
</CustomField>