force-app/main/default/objects/maps__AdvRouteRoutableObject__c/fields/maps__DefaultTargetVisits__c.field-meta.xml
<CustomField>
    <fullName>maps__DefaultTargetVisits__c</fullName>
    <description>This is the default value used for target number of visits</description>
    <label>Default Target Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>