force-app/main/default/objects/maps__AdvRouteRoutableObject__c/fields/maps__DefaultVisitDuration__c.field-meta.xml
<CustomField>
    <fullName>maps__DefaultVisitDuration__c</fullName>
    <description>This is the default value used when determining the duration needed for a visit</description>
    <label>Default Visit Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>