force-app/main/default/objects/maps__AdvRouteRoutableObject__c/fields/maps__EndDateField__c.field-meta.xml
<CustomField>
    <fullName>maps__EndDateField__c</fullName>
    <description>This is the date field to use as the end date for promo windows</description>
    <label>End Date Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>