force-app/main/default/objects/maps__AdvRouteRoutableObject__c/fields/maps__FrequencyLengthField__c.field-meta.xml
<CustomField>
    <fullName>maps__FrequencyLengthField__c</fullName>
    <description>This is the field used for frequency length</description>
    <label>Frequency Length Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>