force-app/main/default/objects/maps__AdvRouteRoutableObject__c/fields/maps__MaxDaysBetweenVisitsField__c.field-meta.xml
<CustomField>
    <fullName>maps__MaxDaysBetweenVisitsField__c</fullName>
    <description>This is the field used to get the maximum number of days between visits</description>
    <label>Max Days Between Visits Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>