force-app/main/default/objects/maps__AdvRouteRoutableObject__c/fields/maps__MinDaysBetweenVisitsField__c.field-meta.xml
<CustomField>
    <fullName>maps__MinDaysBetweenVisitsField__c</fullName>
    <description>This is the field used to get the minimum number of days between visits</description>
    <label>Min Days Between Visits Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>