force-app/main/default/objects/maps__AdvRouteRoutableObject__c/fields/maps__PromoAvailableFor__c.field-meta.xml
<CustomField>
    <fullName>maps__PromoAvailableFor__c</fullName>
    <description>This associates the promo window with the Routable objects it is available for</description>
    <label>Promo Available For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>