force-app/main/default/objects/maps__AdvRouteRoutableObject__c/fields/maps__PromoFieldAssociation__c.field-meta.xml
<CustomField>
    <fullName>maps__PromoFieldAssociation__c</fullName>
    <description>This tells us how the promo window object connects to the Routable object</description>
    <label>Promo Field Association</label>
    <length>255</length>
    <type>Text</type>
</CustomField>