force-app/main/default/objects/maps__AdvRouteRoutableObject__c/fields/maps__PromoObject__c.field-meta.xml
<CustomField>
    <fullName>maps__PromoObject__c</fullName>
    <description>This is the api of the object used for promo windows if different from the Routable object&apos;s object</description>
    <label>Promo Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>