force-app/main/default/objects/maps__AdvRouteRoutableObject__c/fields/maps__StartDateField__c.field-meta.xml
<CustomField>
    <fullName>maps__StartDateField__c</fullName>
    <description>This is the date field to use as the start date for promo windows</description>
    <label>Start Date Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>