force-app/main/default/objects/maps__AdvRouteRoutableObject__c/fields/maps__TargetVisitsField__c.field-meta.xml
<CustomField>
    <fullName>maps__TargetVisitsField__c</fullName>
    <description>This is the field to use for the target number of visits</description>
    <label>Target Visits Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>