force-app/main/default/objects/maps__AdvRouteRoutableObject__c/fields/maps__TooltipFieldApis__c.field-meta.xml
<CustomField>
    <fullName>maps__TooltipFieldApis__c</fullName>
    <description>This is a JSON array of field apis used to create tooltips</description>
    <label>Tooltip Field Apis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>