force-app/main/default/objects/maps__AdvRouteRoutableObject__c/fields/maps__VisitDurationField__c.field-meta.xml
<CustomField>
    <fullName>maps__VisitDurationField__c</fullName>
    <description>This is the field used to determine the visit duration</description>
    <label>Visit Duration Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>